Fixed filter cut off issue

--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -25,7 +25,7 @@ body {
   display: table;
   height: 100%;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
   width: 100%;
 }
